# nespresso-nes-emulator

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  MINGW_BUILD.md  Makefile  NESPRESSO.sln  NESPRESSO.vcxproj  README.md  TODO.md  WINDOWS_BUILD.md
src/: main.c
src/apu/: apu.c  apu.h
src/cartridge/: rom.c  rom.h
src/cpu/: cpu.c  cpu.h
src/input/: input.c  input.h
src/mapper/: mapper.c  mapper.h
src/memory/: bus.c  bus.c.backup  bus.h
src/platform/: platform.c  platform.h
src/ppu/: ppu.c  ppu.h
